--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -112,6 +112,8 @@ permissions:
   - 'create field_article_image'
   - 'create field_article_related'
   - 'create field_colophon'
+  - 'create field_external_link'
+  - 'create field_external_link_logo'
   - 'create field_list_media'
   - 'create field_top_image'
   - 'create image media'
@@ -207,6 +209,8 @@ permissions:
   - 'edit field_article_image_migrated'
   - 'edit field_article_related'
   - 'edit field_colophon'
+  - 'edit field_external_link'
+  - 'edit field_external_link_logo'
   - 'edit field_list_media'
   - 'edit field_top_image'
   - 'edit own almanac content'
@@ -218,6 +222,8 @@ permissions:
   - 'edit own field_article_image'
   - 'edit own field_article_related'
   - 'edit own field_colophon'
+  - 'edit own field_external_link'
+  - 'edit own field_external_link_logo'
   - 'edit own field_list_media'
   - 'edit own field_top_image'
   - 'edit own image media'
@@ -297,6 +303,8 @@ permissions:
   - 'view latest version'
   - 'view news revisions'
   - 'view own field_article_image'
+  - 'view own field_external_link'
+  - 'view own field_external_link_logo'
   - 'view own field_list_media'
   - 'view own field_top_image'
   - 'view own organization profile'
