--- a/config/sync/user.role.organization.yml
+++ b/config/sync/user.role.organization.yml
@@ -29,6 +29,8 @@ permissions:
   - 'create dot_on_map content'
   - 'create field_article_image_anonymous'
   - 'create field_colophon'
+  - 'create field_external_link'
+  - 'create field_external_link_logo'
   - 'create field_list_media_anonymous'
   - 'create field_top_image_anonymous'
   - 'create image media'
@@ -45,6 +47,8 @@ permissions:
   - 'edit own document media'
   - 'edit own field_article_image_anonymous'
   - 'edit own field_colophon'
+  - 'edit own field_external_link'
+  - 'edit own field_external_link_logo'
   - 'edit own field_list_media_anonymous'
   - 'edit own field_top_image_anonymous'
   - 'edit own image media'
@@ -54,5 +58,6 @@ permissions:
   - 'use editorial transition create_new_draft'
   - 'use text format simpel_html_til_faktabokse'
   - 'view field_top_image_anonymous'
+  - 'view own field_external_link'
   - 'view own unpublished content'
   - 'view own unpublished media'
