--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -122,6 +122,8 @@ permissions:
   - 'create field_article_image'
   - 'create field_article_related'
   - 'create field_colophon'
+  - 'create field_external_link'
+  - 'create field_external_link_logo'
   - 'create field_header'
   - 'create field_list_media'
   - 'create field_top_image'
@@ -218,6 +220,8 @@ permissions:
   - 'edit field_article_image_migrated'
   - 'edit field_article_related'
   - 'edit field_colophon'
+  - 'edit field_external_link'
+  - 'edit field_external_link_logo'
   - 'edit field_header'
   - 'edit field_list_media'
   - 'edit field_top_image'
@@ -230,6 +234,8 @@ permissions:
   - 'edit own field_article_image'
   - 'edit own field_article_related'
   - 'edit own field_colophon'
+  - 'edit own field_external_link'
+  - 'edit own field_external_link_logo'
   - 'edit own field_header'
   - 'edit own field_list_media'
   - 'edit own field_top_image'
@@ -310,6 +316,8 @@ permissions:
   - 'view latest version'
   - 'view news revisions'
   - 'view own field_article_image'
+  - 'view own field_external_link'
+  - 'view own field_external_link_logo'
   - 'view own field_list_media'
   - 'view own field_top_image'
   - 'view own organization profile'
