--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -45,12 +45,16 @@ dependencies:
     - field.field.node.article.lat
     - field.field.node.article.lon
     - field.field.node.article.sis_map_address_dawa
+    - image.style.thumbnail
     - node.type.article
+    - responsive_image.styles.3_column_flex_height
   module:
     - entity_reference_revisions
     - image
     - layout_builder
     - layout_builder_restrictions
+    - link
+    - responsive_image
     - text
     - user
 third_party_settings:
@@ -164,6 +168,29 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
+  field_external_link:
+    type: link
+    label: hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    weight: 8
+    region: content
+  field_external_link_logo:
+    type: image
+    label: hidden
+    settings:
+      image_link: ''
+      image_style: thumbnail
+      image_loading:
+        attribute: lazy
+    third_party_settings: {  }
+    weight: 9
+    region: content
   field_header:
     type: entity_reference_revisions_entity_view
     label: hidden
@@ -172,6 +199,24 @@ content:
       link: ''
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_list_media:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: 3_column_flex_height
+      link: false
+    third_party_settings: {  }
+    weight: 10
+    region: content
+  field_list_media_anonymous:
+    type: responsive_image
+    label: hidden
+    settings:
+      responsive_image_style: 3_column_flex_height
+      image_link: ''
+    third_party_settings: {  }
+    weight: 11
     region: content
   field_teaching_goals:
     type: text_default
@@ -194,14 +239,10 @@ hidden:
   field_contact_person: true
   field_copy_sheet: true
   field_equipment: true
-  field_external_link: true
-  field_external_link_logo: true
   field_factboxes: true
   field_files: true
   field_institution: true
   field_list_date: true
-  field_list_media: true
-  field_list_media_anonymous: true
   field_location: true
   field_materials: true
   field_media_downloads: true
