SIS2-575: Make field_list_media on blog_post not required

--- a/config/sync/field.field.node.blog_post.field_list_media.yml
+++ b/config/sync/field.field.node.blog_post.field_list_media.yml
@@ -12,7 +12,7 @@ entity_type: node
 bundle: blog_post
 label: 'Liste media (webmasters)'
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
