SIS2-575: Make field_list_media on dot_on_map not required

--- a/config/sync/field.field.node.dot_on_map.field_list_media.yml
+++ b/config/sync/field.field.node.dot_on_map.field_list_media.yml
@@ -12,7 +12,7 @@ entity_type: node
 bundle: dot_on_map
 label: 'Liste media'
 description: 'Et lille billede, der vises på interne søgeresultater og andre lister.'
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
