--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/sis_organization.routing.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_organization/sis_organization.routing.yml
@@ -1,5 +1,5 @@
 sis_organization.overview:
-  path: organisationer
+  path: visitkort
   defaults:
     _controller: 'Drupal\sis_organization\Controller\OrganizationController:overview'
     _title_callback: 'Drupal\sis_organization\Controller\OrganizationController:title'
