SIS2-592: Only show anonmous image field for webmasters if its already filled out

--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -124,6 +124,7 @@ permissions:
   - 'create field_colophon'
   - 'create field_header'
   - 'create field_list_media'
+  - 'create field_list_media_anonymous'
   - 'create image media'
   - 'create media'
   - 'create news content'
@@ -219,6 +220,7 @@ permissions:
   - 'edit field_colophon'
   - 'edit field_header'
   - 'edit field_list_media'
+  - 'edit field_list_media_anonymous'
   - 'edit own almanac content'
   - 'edit own article content'
   - 'edit own audio media'
@@ -230,6 +232,7 @@ permissions:
   - 'edit own field_colophon'
   - 'edit own field_header'
   - 'edit own field_list_media'
+  - 'edit own field_list_media_anonymous'
   - 'edit own image media'
   - 'edit own news content'
   - 'edit own page content'
