--- a/config/sync/core.entity_view_display.node.news.full.yml
+++ b/config/sync/core.entity_view_display.node.news.full.yml
@@ -94,7 +94,7 @@ content:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: default
+      view_mode: article
       link: false
     third_party_settings: {  }
     weight: 0
