SIS2-557, SIS2-594, SIS2-574, SIS2-599, SIS2-600, SIS2-607, SIS2-598

--- a/config/sync/block.block.pageheader.yml
+++ b/config/sync/block.block.pageheader.yml
@@ -25,7 +25,7 @@ visibility:
   request_path:
     id: request_path
     negate: true
-    pages: "/profile/*\r\n/kort\r\n/blogs/*\r\n/user/*\r\n/prik/*\r\n/del\r\n/nyhed*\r\n/newsletter/*\r\n/node/preview/*"
+    pages: "/profile/*\r\n/kort\r\n/blogs/*\r\n/user/*\r\n/prik/*\r\n/del\r\n/nyhed*\r\n/newsletter/*\r\n/node/preview/*\r\n/visitkort"
   mobile_detect_device_type:
     id: mobile_detect_device_type
     negate: null
