--- a/config/sync/entity_overview.overview.blog.yml
+++ b/config/sync/entity_overview.overview.blog.yml
@@ -13,6 +13,6 @@ entity_bundles:
     - blog_post
 fields:
   text: search
-engine_id: blog
+engine_id: relewise
 sort_field: created
 show_total: ''
