--- a/config/sync/media.type.remote_video.yml
+++ b/config/sync/media.type.remote_video.yml
@@ -1,12 +1,17 @@
 uuid: 75c782b1-fa25-4bdd-93d6-d4246da85d67
 langcode: da
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - crop
+third_party_settings:
+  crop:
+    image_field: null
 _core:
   default_config_hash: FvzYbqrSLeKG-eXDngFRYlGe3_f8RaSXPBf3i4jWpa0
 id: remote_video
 label: 'Remote video'
-description: 'En ekstern video fra Youtube eller Vimeo.'
+description: 'En ekstern video fra Vimeo.'
 source: 'oembed:video'
 queue_thumbnail_downloads: false
 new_revision: true
@@ -14,7 +19,6 @@ source_configuration:
   source_field: field_media_oembed_video
   thumbnails_directory: 'public://oembed_thumbnails'
   providers:
-    - YouTube
     - Vimeo
 field_map:
   title: name
