--- a/config/sync/core.entity_form_display.node.dot_on_map.default.yml
+++ b/config/sync/core.entity_form_display.node.dot_on_map.default.yml
@@ -39,12 +39,7 @@ third_party_settings:
   field_group:
     group_categorization:
       children:
-        - group_class
-        - group_subject
-        - group_location
-        - group_season
         - group_people_and_places
-        - group_replant_the_planet
       label: Kategorisering
       region: content
       parent_name: group_categorization_wrapper
@@ -60,8 +55,8 @@ third_party_settings:
       children:
         - field_subject
       label: Fag
-      region: content
-      parent_name: group_categorization
+      region: hidden
+      parent_name: group_season
       weight: 6
       format_type: tab
       format_settings:
@@ -73,11 +68,13 @@ third_party_settings:
         required_fields: true
     group_season:
       children:
+        - group_subject
+        - group_location
         - field_season
       label: Årstid
-      region: content
-      parent_name: group_categorization
-      weight: 9
+      region: hidden
+      parent_name: ''
+      weight: 10
       format_type: tab
       format_settings:
         classes: ''
@@ -90,9 +87,9 @@ third_party_settings:
       children:
         - field_class
       label: Klasse
-      region: content
-      parent_name: group_categorization
-      weight: 5
+      region: hidden
+      parent_name: ''
+      weight: 9
       format_type: tab
       format_settings:
         classes: ''
@@ -105,8 +102,8 @@ third_party_settings:
       children:
         - field_location
       label: Sted
-      region: content
-      parent_name: group_categorization
+      region: hidden
+      parent_name: group_season
       weight: 7
       format_type: tab
       format_settings:
@@ -179,8 +176,8 @@ third_party_settings:
       children:
         - field_replant_the_planet
       label: 'Genplant Planeten'
-      region: content
-      parent_name: group_categorization
+      region: hidden
+      parent_name: ''
       weight: 11
       format_type: tab
       format_settings:
@@ -240,12 +237,6 @@ content:
       allowed_formats:
         hide_help: '0'
         hide_guidelines: '0'
-  field_class:
-    type: options_buttons
-    weight: 6
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_contact_information:
     type: text_textarea
     weight: 26
@@ -284,12 +275,6 @@ content:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
-  field_location:
-    type: options_buttons
-    weight: 6
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
     weight: 8
@@ -304,18 +289,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_replant_the_planet:
-    type: options_buttons
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_season:
-    type: options_buttons
-    weight: 5
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_section_bg_graphics:
     type: options_select
     weight: 5
@@ -325,12 +298,6 @@ content:
   field_section_bg_graphics_pos:
     type: options_select
     weight: 6
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_subject:
-    type: options_buttons
-    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -380,7 +347,12 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_class: true
   field_contact_data: true
+  field_location: true
+  field_replant_the_planet: true
+  field_season: true
+  field_subject: true
   langcode: true
   path: true
   promote: true
