SIS2-604: Allow anonymous to upload files on Dot on Map

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -24,6 +24,7 @@ permissions:
   - 'access shortcuts'
   - 'access site-wide contact form'
   - 'access user profiles'
+  - 'create field_files'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
