--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -30,6 +30,7 @@ permissions:
   - 'create article content'
   - 'create dot_on_map content'
   - 'create field_article_image_anonymous'
+  - 'create field_files'
   - 'create field_list_media_anonymous'
   - 'create image media'
   - 'delete own image media'
