SIS2-617: Contact Data field should be required on Dot on Map

--- a/config/sync/field.field.node.dot_on_map.field_contact_information.yml
+++ b/config/sync/field.field.node.dot_on_map.field_contact_information.yml
@@ -18,7 +18,7 @@ entity_type: node
 bundle: dot_on_map
 label: Kontaktdata
 description: 'Dine kontaktoplysninger, såsom telefonnummer, e-mail og postadresse.'
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
