--- a/config/sync/field.field.node.article.field_colophon_author.yml
+++ b/config/sync/field.field.node.article.field_colophon_author.yml
@@ -11,7 +11,7 @@ entity_type: node
 bundle: article
 label: Forfatter
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
