--- a/config/sync/field.field.node.article.field_contact_person.yml
+++ b/config/sync/field.field.node.article.field_contact_person.yml
@@ -19,7 +19,7 @@ entity_type: node
 bundle: article
 label: Kontaktperson
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
