--- a/config/sync/workbench_email.workbench_email_template.article_submitted.yml
+++ b/config/sync/workbench_email.workbench_email_template.article_submitted.yml
@@ -1,7 +1,10 @@
 uuid: d1094839-14f0-49b9-8e2f-cd0f19d665f6
 langcode: da
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - node.type.article
+    - node.type.dot_on_map
 id: article_submitted
 label: 'Artikel indsendt'
 format: plain_text
@@ -13,7 +16,9 @@ recipient_types:
     status: true
     settings:
       recipients: skoven-i-skolen@nst.dk
-bundles: {  }
+bundles:
+  'node:article': 'node:article'
+  'node:dot_on_map': 'node:dot_on_map'
 body:
   value: "En artikel afventer godkendelse\r\n\r\nSe artiklen [node:url]"
   format: plain_text
