SIS2-601: Added descriptions and help text to fields and field groups on node_dot_on_map_form

--- a/config/sync/core.entity_form_display.node.dot_on_map.default.yml
+++ b/config/sync/core.entity_form_display.node.dot_on_map.default.yml
@@ -129,7 +129,7 @@ third_party_settings:
         classes: ''
         show_empty_fields: false
         id: ''
-        description: ''
+        description: 'Hvis din kategori ikke findes, så send en besked til info@skoven-i-skolen.dk'
         required_fields: true
     group_information:
       children:
