--- a/config/sync/field.field.node.dot_on_map.body.yml
+++ b/config/sync/field.field.node.dot_on_map.body.yml
@@ -18,7 +18,7 @@ field_name: body
 entity_type: node
 bundle: dot_on_map
 label: Beskrivelse
-description: 'En længere beskrivelse af aktiviteten.'
+description: 'En længere beskrivelse af aktiviteten. Skriv dit tilbud til skoler - eller om den institution du lægger på kortet.'
 required: false
 translatable: true
 default_value: {  }
