--- a/config/sync/field.field.node.dot_on_map.field_summary.yml
+++ b/config/sync/field.field.node.dot_on_map.field_summary.yml
@@ -10,7 +10,7 @@ field_name: field_summary
 entity_type: node
 bundle: dot_on_map
 label: Resumé
-description: 'Du kan skrive en kort beskrivelse af begivenheden, som vil blive vist på en popup.'
+description: 'Du kan skrive en kort beskrivelse af begivenheden, som vil blive vist som en popup på kortet når din prik klikkes.'
 required: false
 translatable: false
 default_value: {  }
