--- a/config/sync/core.entity_form_display.node.dot_on_map.default.yml
+++ b/config/sync/core.entity_form_display.node.dot_on_map.default.yml
@@ -48,8 +48,8 @@ third_party_settings:
         - group_replant_the_planet
       label: Kategorisering
       region: content
-      parent_name: group_categorization_wrapper
-      weight: 15
+      parent_name: ''
+      weight: 14
       format_type: tabs
       format_settings:
         classes: ''
@@ -61,7 +61,7 @@ third_party_settings:
       children:
         - field_subject
       label: Fag
-      region: content
+      region: hidden
       parent_name: group_categorization
       weight: 6
       format_type: tab
@@ -76,7 +76,7 @@ third_party_settings:
       children:
         - field_season
       label: Årstid
-      region: content
+      region: hidden
       parent_name: group_categorization
       weight: 9
       format_type: tab
@@ -91,7 +91,7 @@ third_party_settings:
       children:
         - field_class
       label: Klasse
-      region: content
+      region: hidden
       parent_name: group_categorization
       weight: 5
       format_type: tab
@@ -106,7 +106,7 @@ third_party_settings:
       children:
         - field_location
       label: Sted
-      region: content
+      region: hidden
       parent_name: group_categorization
       weight: 7
       format_type: tab
@@ -119,7 +119,7 @@ third_party_settings:
         required_fields: true
     group_categorization_wrapper:
       children:
-        - group_categorization
+        - field_people_and_places
       label: Kategorisering
       region: content
       parent_name: ''
@@ -162,10 +162,9 @@ third_party_settings:
         description: ''
         required_fields: true
     group_people_and_places:
-      children:
-        - field_people_and_places
+      children: {  }
       label: 'Mennesker & steder'
-      region: content
+      region: hidden
       parent_name: group_categorization
       weight: 10
       format_type: tab
@@ -180,7 +179,7 @@ third_party_settings:
       children:
         - field_replant_the_planet
       label: 'Genplant Planeten'
-      region: content
+      region: hidden
       parent_name: group_categorization
       weight: 11
       format_type: tab
@@ -247,12 +246,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_class:
-    type: options_buttons
-    weight: 6
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_contact_information:
     type: text_textarea
     weight: 26
@@ -291,12 +284,6 @@ content:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
-  field_location:
-    type: options_buttons
-    weight: 6
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
     weight: 8
@@ -311,18 +298,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_replant_the_planet:
-    type: options_buttons
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_season:
-    type: options_buttons
-    weight: 5
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_section_bg_graphics:
     type: options_select
     weight: 5
@@ -332,12 +307,6 @@ content:
   field_section_bg_graphics_pos:
     type: options_select
     weight: 6
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_subject:
-    type: options_buttons
-    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -414,7 +383,12 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_class: true
   field_contact_data: true
+  field_location: true
+  field_replant_the_planet: true
+  field_season: true
+  field_subject: true
   langcode: true
   promote: true
   sticky: true
