--- a/config/sync/core.entity_form_display.block_content.blog_list.default.yml
+++ b/config/sync/core.entity_form_display.block_content.blog_list.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - block_content.type.blog_list
     - field.field.block_content.blog_list.field_max_elements
+    - field.field.block_content.blog_list.field_title
 id: block_content.blog_list.default
 targetEntityType: block_content
 bundle: blog_list
@@ -12,14 +13,22 @@ mode: default
 content:
   field_max_elements:
     type: number
-    weight: 26
+    weight: 3
     region: content
     settings:
       placeholder: ''
     third_party_settings: {  }
+  field_title:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   info:
     type: string_textfield
-    weight: -5
+    weight: 1
     region: content
     settings:
       size: 60
