--- a/config/sync/core.entity_form_display.block_content.blog_overview.default.yml
+++ b/config/sync/core.entity_form_display.block_content.blog_overview.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - block_content.type.blog_overview
     - field.field.block_content.blog_overview.field_blog_overview
+    - field.field.block_content.blog_overview.field_title
   module:
     - entity_overview
 id: block_content.blog_overview.default
@@ -14,13 +15,21 @@ mode: default
 content:
   field_blog_overview:
     type: overview_filter_widget
-    weight: 26
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_title:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   info:
     type: string_textfield
-    weight: -5
+    weight: 1
     region: content
     settings:
       size: 60
