SIS2-31: Added divider curly layout block

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -120,6 +120,12 @@ divider:
     theme:
       dist/components/css/components/02-molecules/divider.css: {}
 
+divider-curly:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/02-molecules/divider-curly.css: {}
+
 facts-box:
   version: VERSION
   css:
