--- a/config/sync/user.role.organization.yml
+++ b/config/sync/user.role.organization.yml
@@ -30,6 +30,7 @@ permissions:
   - 'create field_article_image_anonymous'
   - 'create field_colophon'
   - 'create field_list_media_anonymous'
+  - 'create field_top_image_anonymous'
   - 'create image media'
   - 'create remote_video media'
   - 'create video media'
@@ -45,11 +46,13 @@ permissions:
   - 'edit own field_article_image_anonymous'
   - 'edit own field_colophon'
   - 'edit own field_list_media_anonymous'
+  - 'edit own field_top_image_anonymous'
   - 'edit own image media'
   - 'edit own remote_video media'
   - 'edit own video media'
   - 'update own organization profile'
   - 'use editorial transition create_new_draft'
   - 'use text format simpel_html_til_faktabokse'
+  - 'view field_top_image_anonymous'
   - 'view own unpublished content'
   - 'view own unpublished media'
