--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -124,6 +124,7 @@ permissions:
   - 'create field_colophon'
   - 'create field_header'
   - 'create field_list_media'
+  - 'create field_top_image'
   - 'create image media'
   - 'create media'
   - 'create news content'
@@ -219,6 +220,7 @@ permissions:
   - 'edit field_colophon'
   - 'edit field_header'
   - 'edit field_list_media'
+  - 'edit field_top_image'
   - 'edit own almanac content'
   - 'edit own article content'
   - 'edit own audio media'
@@ -230,6 +232,7 @@ permissions:
   - 'edit own field_colophon'
   - 'edit own field_header'
   - 'edit own field_list_media'
+  - 'edit own field_top_image'
   - 'edit own image media'
   - 'edit own news content'
   - 'edit own page content'
@@ -303,10 +306,12 @@ permissions:
   - 'view dot_on_map revisions'
   - 'view field_article_image'
   - 'view field_list_media'
+  - 'view field_top_image'
   - 'view latest version'
   - 'view news revisions'
   - 'view own field_article_image'
   - 'view own field_list_media'
+  - 'view own field_top_image'
   - 'view own organization profile'
   - 'view own profile'
   - 'view own unpublished content'
