--- a/config/sync/core.entity_view_display.profile.organization.default.yml
+++ b/config/sync/core.entity_view_display.profile.organization.default.yml
@@ -13,11 +13,14 @@ dependencies:
     - field.field.profile.organization.field_section_bg_graphics
     - field.field.profile.organization.field_section_bg_graphics_pos
     - field.field.profile.organization.field_top_image
+    - field.field.profile.organization.field_top_image_anonymous
     - profile.type.organization
+    - responsive_image.styles.wide
   module:
     - address
     - image
     - link
+    - responsive_image
     - sis_organization
     - text
 id: profile.organization.default
@@ -93,6 +96,15 @@ content:
       link: false
     third_party_settings: {  }
     weight: 7
+    region: content
+  field_top_image_anonymous:
+    type: responsive_image
+    label: hidden
+    settings:
+      responsive_image_style: wide
+      image_link: ''
+    third_party_settings: {  }
+    weight: 8
     region: content
 hidden:
   field_section_bg_graphics: true
