--- a/config/sync/field.storage.profile.field_top_image.yml
+++ b/config/sync/field.storage.profile.field_top_image.yml
@@ -3,8 +3,12 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - media
     - profile
+third_party_settings:
+  field_permissions:
+    permission_type: custom
 id: profile.field_top_image
 field_name: field_top_image
 entity_type: profile
