--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -32,9 +32,12 @@ permissions:
   - 'create field_article_image_anonymous'
   - 'create field_files'
   - 'create field_list_media_anonymous'
+  - 'create field_top_image'
   - 'create image media'
   - 'delete own image media'
+  - 'edit field_top_image'
   - 'edit own field_article_image_anonymous'
+  - 'edit own field_top_image'
   - 'edit own image media'
   - 'search content'
   - 'use editorial transition create_new_draft'
@@ -49,6 +52,8 @@ permissions:
   - 'view field_colophon'
   - 'view field_list_media'
   - 'view field_list_media_anonymous'
+  - 'view field_top_image'
+  - 'view field_top_image_anonymous'
   - 'view media'
   - 'view own field_article_image'
   - 'view own field_article_image_anonymous'
@@ -57,4 +62,6 @@ permissions:
   - 'view own field_colophon'
   - 'view own field_list_media'
   - 'view own field_list_media_anonymous'
+  - 'view own field_top_image'
+  - 'view own field_top_image_anonymous'
   - 'view own unpublished media'
