--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -39,6 +39,8 @@ permissions:
   - 'view field_colophon'
   - 'view field_list_media'
   - 'view field_list_media_anonymous'
+  - 'view field_top_image'
+  - 'view field_top_image_anonymous'
   - 'view media'
   - 'view own field_article_image'
   - 'view own field_article_image_anonymous'
@@ -47,3 +49,5 @@ permissions:
   - 'view own field_colophon'
   - 'view own field_list_media'
   - 'view own field_list_media_anonymous'
+  - 'view own field_top_image'
+  - 'view own field_top_image_anonymous'
